--- a/src/Club/WeatherBundle/Resources/views/Weather/index.html.twig
+++ b/src/Club/WeatherBundle/Resources/views/Weather/index.html.twig
@@ -5,9 +5,10 @@
           <div class="hero-unit">
             <h1><img alt="{{ curr.weatherDesc.0.value }}" src="{{ curr.weatherIconUrl.0.value }}" /> {% trans %}Weather right now!{% endtrans %}</h1>
             <p>
-                The weather location is {{ request.query }} at {{ curr.observation_time }}.<br>
-                Current temperature: {{ curr.temp_C }}&deg;.<br>
-                Current wind: {{ curr.windspeedKmph}} km/t, {{ curr.winddir16Point }}<br />
+                {% trans with {'%time%':curr.observation_time|club_datetime} %}The weather was last updated at %time%.{% endtrans %}<br>
+                {% trans with {'%temp%':curr.temp_C} %}Current temperature: %temp%{% endtrans %}<br>
+                {% trans with {'%speed%':curr.windspeedKmph, '%dir%':curr.winddir16Point} %}Current wind: %speed% km/t, %dir%{% endtrans %}<br />
+                {% trans with {'%sunrise%':curr.sunrise|club_time,'%sunset%':curr.sunset|club_time} %}Sunrise: %sunrise%, sunset: %sunset%{% endtrans %}
             </p>
           </div>
           <div class="row-fluid">
