--- a/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/base.html.twig
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% stylesheets
-        "@ClubLayoutBundle/Resources/public/css/ui-lightness/jquery-ui-1.8.23.custom.css"
+        "@ClubLayoutBundle/Resources/public/css/ui-lightness/jquery-ui-1.9.0.custom.min.css"
         "@ClubLayoutBundle/Resources/public/bootstrap/css/bootstrap.min.css"
         "@ClubLayoutBundle/Resources/public/bootstrap/css/bootstrap-responsive.min.css"
         "@ClubLayoutBundle/Resources/public/css/mystyle.css" %}
