--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -71,7 +71,83 @@
             });
         }
     });
+
+    $(function() {
+        var availableTags = [
+            "00:00",
+            "00:30",
+            "01:00",
+            "01:30",
+            "02:00",
+            "02:30",
+            "03:00",
+            "03:30",
+            "04:00",
+            "04:30",
+            "05:00",
+            "05:30",
+            "06:00",
+            "06:30",
+            "07:00",
+            "07:30",
+            "08:00",
+            "08:30",
+            "09:00",
+            "09:30",
+            "10:00",
+            "10:30",
+            "11:00",
+            "11:30",
+            "12:00",
+            "12:30",
+            "13:00",
+            "13:30",
+            "14:00",
+            "14:30",
+            "15:00",
+            "15:30",
+            "16:00",
+            "16:30",
+            "17:00",
+            "17:30",
+            "18:00",
+            "18:30",
+            "19:00",
+            "19:30",
+            "20:00",
+            "20:30",
+            "21:00",
+            "21:30",
+            "22:00",
+            "22:30",
+            "23:00",
+            "23:30"
+        ];
+        $( "#{{ id }}_time" ).autocomplete({
+            source: availableTags,
+            minLength: 0
+        }).
+        focus(function() {
+            $("#{{ id }}_time").autocomplete( "search" , "");
+        });
+    });
+
     </script>
+
+    <style>
+    .ui-autocomplete {
+        max-height: 100px;
+        overflow-y: auto;
+        /* prevent horizontal scrollbar */
+        overflow-x: hidden;
+    }
+    /* IE 6 doesn't support max-height
+     * we use height instead, but this forces the menu to always be this tall
+     */
+    * html .ui-autocomplete {
+        height: 100px;
+    }
+    </style>
 
     {{ form_widget(form) }}
 {% endspaceless %}
