--- a/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
@@ -1,15 +1,32 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
 {% block body %}
-<h2>ClubMaster Upgrader</h2>
+<h3>ClubMaster upgrade tool</h3>
 
-<p>This is the upgrader tool ClubMaster.</p>
+<h4>Database versions</h4>
+<p>Your current database version: <strong>{{ current_version }}</strong></p>
 
-<p>Your current database version: <strong>{{ configuration.currentVersion }}</strong></p>
-<p>Latest database version: <strong>{{ configuration.latestVersion }}</strong></p>
+<table class="table table-bordered">
+    <tr>
+        <th>{% trans %}Version{% endtrans %}</th>
+        <th>{% trans %}Installed{% endtrans %}</th>
+    </tr>
+    {% for version in migrations %}
+    <tr>
+        <td>{{ version.version }}</td>
+        <td>{% include "ClubLayoutBundle:Default:boolean.html.twig" with {'flag':version.is_upgraded} %}</td>
+    </tr>
+    {% endfor %}
+</table>
 
-{% if configuration.currentVersion == configuration.latestVersion %}
-<p>There are no database upgrades for this version. Just return to <a href="{{ path('homepage') }}">the login screen</a> to continue to use ClubMaster.</p>
+{% if not_installed|length == 0 %}
+<p>There are no database upgrades for this version.</p>
+
+<form class="form-horizontal">
+    <div class="form-actions">
+        <a href="{{ path('homepage') }}" class="btn btn-info">Return home</a>
+    </div>
+</form>
 
 {% else %}
 <P>You are not running the latest version of ClubMaster.</p>
@@ -19,9 +36,12 @@
   <li>Push the <strong>UPGRADE</strong> button below.</li>
 </ul>
 
-<p><strong><a href="{{ path('club_installer_upgrade_upgrade') }}">UPGRADE ClubMaster</a></strong></p>
-{% endif %}
+<form class="form-horizontal">
+    <div class="form-actions">
+        <a href="{{ path('club_installer_upgrade_migrate') }}" class="btn btn-info">Upgrade database</a>
+    </div>
+</form>
 
-<h4>ClubMaster team</h4>
+{% endif %}
 
 {% endblock %}
