Added booking migration.

--- a/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Upgrade/index.html.twig
@@ -36,6 +36,8 @@
   <li>Push the <strong>UPGRADE</strong> button below.</li>
 </ul>
 
+<p>Keep in mind that the migration can take several minutes depending on how many database changes.</p>
+
 <form class="form-horizontal">
     <div class="form-actions">
         <a href="{{ path('club_installer_upgrade_migrate') }}" class="btn btn-info">Upgrade database</a>
