Added announcements to welcome page.

--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -14,6 +14,7 @@
 
 {% block body %}
 
+{% include "ClubNewsBundle:Announcement:announcement.html.twig" %}
 {% render "ClubMenuBundle:Default:dashMenu" %}
 
 {% if welcome.content is defined %}
