Fixed minor bugs in team system.

--- a/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
@@ -1,7 +1,6 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
 {% block body %}
-<h2>{% trans %}Booking{% endtrans %}</h2>
 
 <fieldset>
   <legend>{% trans %}Booking Information{% endtrans %}</legend>
@@ -19,4 +18,5 @@
   </div>
 </fieldset>
 
+{% include "ClubBookingBundle:Booking:attend_team.html.twig" %}
 {% endblock %}
