--- a/src/Club/InstallerBundle/Resources/views/Installer/parameter.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/parameter.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
 
 <p>In order to continue you have to configure your parameters.yml file, that is the file which held the database connection.</p>
-<p>Please locate your app/parameters.yml file, and overwrite the file with the following data:</p>
+<p>Please locate your app/config/parameters.yml file, and overwrite the file with the following data:</p>
 
-<legend>{% trans %}parameters.yml{% endtrans %}</legend>
+<legend>{% trans %}app/config/parameters.yml{% endtrans %}</legend>
 <textarea class="big">{{ parameters }}</textarea>
 
 <form method="post" action="{{ path('club_installer_installer_parameter') }}" class="form-horizontal">
