--- a/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/administrator.html.twig
@@ -1,15 +1,19 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
-{% block body %}
+{% block header %}
+<div class="page-header"><h1>ClubMaster Installation <small>Administrator</small></h1></div>
+{% endblock %}
+
+{% block pagenav %}
 {% include "ClubInstallerBundle:Installer:top.html.twig" with {'page':'administrator'} %}
+{% endblock %}
 
-<h2>{% trans %}ClubMaster Installation{% endtrans %}</h2>
-
-<p>{% trans %}This is the installer of ClubMaster.{% endtrans %}</p>
+{% block body %}
+<p>Now setup your administrator user of ClubMaster.</p>
 
 <form method="post" action="" class="form-horizontal">
   <fieldset>
-    <legend>{% trans %}Personal Information{% endtrans %}</legend>
+    <legend>Personal Information</legend>
 
     {{ form_row(form.member_number) }}
     {{ form_row(form.profile.first_name) }}
@@ -22,7 +26,7 @@
   </fieldset>
 
   <fieldset>
-    <legend>{% trans %}Account Information{% endtrans %}</legend>
+    <legend>Account Information</legend>
 
     {{ form_row(form.password) }}
 
