--- a/src/Club/InstallerBundle/Resources/views/Installer/config.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/config.html.twig
@@ -1,8 +1,14 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
-{% block body %}
-{% include "ClubInstallerBundle:Installer:top.html.twig" with {'page':'config'} %}
+{% block header %}
+<div class="page-header"><h1>ClubMaster Installation <small>Configuration</small></h1></div>
+{% endblock %}
 
+{% block pagenav %}
+{% include "ClubInstallerBundle:Installer:top.html.twig" with {'page':'config'} %}
+{% endblock %}
+
+{% block body %}
 <p>{% trans %}You will need a database connection, please configure it here.{% endtrans %}</p>
 
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_installer_installer_config')} %}
