--- a/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/location.html.twig
@@ -1,11 +1,15 @@
 {% extends "ClubInstallerBundle::base.html.twig" %}
 
-{% block body %}
+{% block header %}
+<div class="page-header"><h1>ClubMaster Installation <small>Location</small></h1></div>
+{% endblock %}
+
+{% block pagenav %}
 {% include "ClubInstallerBundle:Installer:top.html.twig" with {'page':'location'} %}
+{% endblock %}
 
-<h2>{% trans %}ClubMaster Installation{% endtrans %}</h2>
-
-<p>{% trans %}This is the installer of ClubMaster.{% endtrans %}</p>
+{% block body %}
+<p>{% trans %}Setup a default location for your first Club.{% endtrans %}</p>
 
 <form method="post" action="{{ path('club_installer_installer_location') }}" class="form-horizontal">
   <fieldset>
