--- a/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/checkouttop.html.twig
@@ -1,33 +1,33 @@
 <ul class="breadcrumb">
     {% if active_page == 'cart' %}
-    <li>View cart <span class="divider">/</span></li>
+    <li>{% trans %}View cart{% endtrans %} <span class="divider">/</span></li>
     {% else %}
-    <li><a href="{{ path('shop_checkout') }}">View cart</a> <span class="divider">/</span></li>
+    <li><a href="{{ path('shop_checkout') }}">{% trans %}View cart{% endtrans %}</a> <span class="divider">/</span></li>
     {% endif %}
 
     {% if active_page == 'shipping' %}
-    <li>Choose shipping <span class="divider">/</span></li>
+    <li>{% trans %}Choose shipping{% endtrans %} <span class="divider">/</span></li>
     {% elseif cart.shipping is defined %}
-    <li><a href="{{ path('shop_checkout_shipping') }}">Choose shipping</a> <span class="divider">/</span></li>
+    <li><a href="{{ path('shop_checkout_shipping') }}">{% trans %}Choose shipping{% endtrans %}</a> <span class="divider">/</span></li>
     {% else %}
-    <li class="active">Choose shipping <span class="divider">/</span></li>
+    <li class="active">{% trans %}Choose shipping{% endtrans %} <span class="divider">/</span></li>
     {% endif %}
 
     {% if active_page == 'payment' %}
-    <li>Choose payment <span class="divider">/</span></li>
+    <li>{% trans %}Choose payment{% endtrans %} <span class="divider">/</span></li>
     {% elseif cart.paymentMethod is defined %}
-    <li><a href="{{ path('shop_checkout_payment') }}">Choose payment</a> <span class="divider">/</span></li>
+    <li><a href="{{ path('shop_checkout_payment') }}">{% trans %}Choose payment{% endtrans %}</a> <span class="divider">/</span></li>
     {% else %}
-    <li class="active">Choose payment <span class="divider">/</span></li>
+    <li class="active">{% trans %}Choose payment{% endtrans %} <span class="divider">/</span></li>
     {% endif %}
 
     {% if active_page == 'review' %}
-    <li>Review order <span class="divider">/</span></li>
+    <li>{% trans %}Review order{% endtrans %} <span class="divider">/</span></li>
     {% elseif cart.paymentMethod is defined %}
-    <li><a href="{{ path('shop_checkout_review') }}">Review order</a> <span class="divider">/</span></li>
+    <li><a href="{{ path('shop_checkout_review') }}">{% trans %}Review order{% endtrans %}</a> <span class="divider">/</span></li>
     {% else %}
-    <li class="active">Review order <span class="divider">/</span></li>
+    <li class="active">{% trans %}Review order{% endtrans %} <span class="divider">/</span></li>
     {% endif %}
 
-    <li class="active">Done</li>
+    <li class="active">{% trans %}Done{% endtrans %}</li>
 </ul>
