--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -15,7 +15,7 @@
 {% block body %}
 
 {% include "ClubNewsBundle:Announcement:announcement.html.twig" %}
-{% render "ClubMenuBundle:Default:dashMenu" %}
+{% render controller("ClubMenuBundle:Default:dashMenu") %}
 
 {% if welcome.content is defined %}
 {{ welcome.content|raw }}
