--- a/src/Club/LayoutBundle/Resources/views/Default/flash_info.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_info.html.twig
@@ -1,9 +1,9 @@
-{% if app.session.hasFlash('info') %}
+{% for flashMessage in app.session.flashbag.get('info') %}
 <div class="alert alert-info">
     <strong>{% trans %}Heads up!{% endtrans %}</strong>
-    {{ app.session.flash('info') }}
+    {{ flashMessage }}
 </div>
-{% endif %}
+{% endfor %}
 
 {% if msg is defined %}
 <div class="alert alert-info">
