--- a/src/Club/LayoutBundle/Resources/views/Default/flash_error.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_error.html.twig
@@ -1,9 +1,9 @@
-{% if app.session.hasFlash('error') %}
+{% for flashMessage in app.session.flashbag.get('error') %}
 <div class="alert alert-error">
     <strong>{% trans %}Oh snap!{% endtrans %}</strong>
-    {{ app.session.flash('error') }}
+    {{ flashMessage }}
 </div>
-{% endif %}
+{% endfor %}
 
 {% if msg is defined %}
 <div class="alert alert-error">
