--- a/src/Club/LayoutBundle/Resources/views/Default/flash_success.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/flash_success.html.twig
@@ -1,6 +1,6 @@
-{% if app.session.hasFlash('notice') %}
+{% for flashMessage in app.session.flashbag.get('notice') %}
 <div class="alert alert-success">
     <strong>{% trans %}Well done!{% endtrans %}</strong>
-    {{ app.session.flash('notice') }}
+    {{ flashMessage }}
 </div>
-{% endif %}
+{% endfor %}
