Added password on new user mail.

--- a/src/Club/MailBundle/Resources/views/Template/user_new.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/user_new.html.twig
@@ -4,6 +4,7 @@ You has just been added as a member on ClubMaster, you can logn here:
 {{ url }}
 
 Username: {{ user.memberNumber }}
+Password: {{ user.plaintextPassword }}
 
 Best regards,
 ClubMaster
