Search all users in search field.

--- a/src/Club/LayoutBundle/Resources/views/Default/ajax_user.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/ajax_user.html.twig
@@ -28,6 +28,7 @@
                 dataType: "json",
                 data: {
                     maxRows: 12,
+                    view: 'all',
                     query: request.term
                 },
                 success: function( data ) {
