Translate cvr to vat.

--- a/src/Club/MailBundle/Resources/views/Template/order_new.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/order_new.html.twig
@@ -39,7 +39,7 @@ Payment Method
 Delivery address
 -------------------------------
 Company: {{ order.shippingAddress.companyName }}
-CVR: {{ order.shippingAddress.cvr }}
+VAT: {{ order.shippingAddress.vat }}
 Name: {{ order.shippingAddress.firstName }} {{ order.shippingAddress.lastName }}
 Street: {{ order.shippingAddress.street }}
 City: {{ order.shippingAddress.postalCode }} {{ order.shippingAddress.city }}
@@ -49,7 +49,7 @@ Country: {{ order.shippingAddress.country }}
 Billing address
 -------------------------------
 Company: {{ order.billingAddress.companyName }}
-CVR: {{ order.billingAddress.cvr }}
+VAT: {{ order.billingAddress.vat }}
 Name: {{ order.billingAddress.firstName }} {{ order.billingAddress.lastName }}
 Street: {{ order.billingAddress.street }}
 City: {{ order.billingAddress.postalCode }} {{ order.billingAddress.city }}
