--- a/src/Club/ShopBundle/Resources/views/Order/address_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Order/address_table.html.twig
@@ -1,8 +1,8 @@
 <dl class="dl-horizontal">
             <dt>{% trans %}Company{% endtrans %}</dt>
             <dd>{{ address.companyName }}</dd>
-            <dt>{% trans %}CVR{% endtrans %}</dt>
-            <dd>{{ address.cvr }}</dd>
+            <dt>{% trans %}VAT{% endtrans %}</dt>
+            <dd>{{ address.vat }}</dd>
             <dt>{% trans %}Name{% endtrans %}</dt>
             <dd>{{ address.firstName }} {{ address.lastName }}</dd>
             <dt>{% trans %}Street{% endtrans %}</dt>
