--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -26,9 +26,13 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block body %}
-<h2>{{ location.locationName}} <small>{{ date|club_date('full') }}</small></h2>
+{% block header %}
+<div class="page-header">
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> {{ location.locationName }} <small>{{ date|club_date('full') }}</small></h1>
+</div>
+{% endblock %}
 
+{% block body %}
 <form method="POST" action="{{ path('club_booking_overview') }}">
 <p>
 {% for item in nav %}
