--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -36,7 +36,7 @@
 <form method="POST" action="{{ path('club_booking_overview') }}">
 <p>
 {% for item in nav %}
-    <a class="btn btn-info btn-large" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
+    <a class="btn btn-info" href="{{ path('club_booking_overview_index', {'date':item|date('Y-m-d')}) }}"><span>{{ item|club_day }} &raquo;</span></a>
 {% endfor %}
 
 <input type="hidden" name="date" id="date" class="pull-right" />
