--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -28,7 +28,7 @@
 
 {% block header %}
 <div class="page-header">
-    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> {{ location.locationName }} <small>{{ date|club_date('full') }}</small></h1>
+    <h1><img class="img-polaroid" src="{{ asset('bundles/clublayout/images/icons/32x32/time.png') }}" /> <a href="{{ path('club_booking_location_index') }}">{{ location.locationName }}</a> <small>{{ date|club_date('full') }}</small></h1>
 </div>
 {% endblock %}
 
